--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Калькулятор</title>
+    <title>5 задание</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -15,7 +15,7 @@
             Список товаров
         </div></label>
         <br />
-        <select name="products" id="products-select" multiple="multiple" size="5">
+        <select name="products" id="products-select">
             <option value="">Выберете товар</option>
         </select>
         <div style="margin: 30px 0 0; font-size: 20px">
